--- a/infinite-scroll/src/index.css
+++ b/infinite-scroll/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.list{
+  overflow: scroll;
+  margin: auto;
+  height: 700px;
+  text-align: center;
+}
